// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Function | Function | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 40,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 34,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 3,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "40 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "34 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "3 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 13`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 14`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 15`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 16`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 17`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Null 18`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 40,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 3,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "40 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "3 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 13`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 14`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 15`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 16`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 17`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 18`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 19`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 20`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 21`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 40,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 22`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 23`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 24`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 3,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 25`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 26`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 27`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "40 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 28`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 29`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 30`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": "3 1",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 31`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 32`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 33`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 34`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 35`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Function | Object 36`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "bar",
    "type": "Error",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Null 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Null 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Null 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Null 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    null,
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Null 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Null 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 2`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 3`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 4`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 5`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 6`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 7`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 8`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 9`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 10`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 11`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 1,
  "result": [Function],
}
`;

exports[`brute force Function | Null | Object 12`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    [Function],
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'apply' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": [Function],
}
`;

exports[`brute force Null | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 1`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    Object {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 2`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    Object {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 3`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    Object {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 4`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 5`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 6`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    [Function],
    Object {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Object 1`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    null,
    Object {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Object 2`] = `
Object {
  "error": Object {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": Array [
    null,
    null,
    Object {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
